Continue DI & DB setup
- Created multiple DAO
- Created ViewModelFactory
- Added implementation of Room+Retrofit datasource using datasource as source of truth

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -22,7 +22,7 @@
 
     <fragment
             android:id="@+id/home"
-            android:name="cat.xarxacatala.xarxacatalapp.ui.ShowsFragment"
+            android:name="cat.xarxacatala.xarxacatalapp.shows.ShowsFragment"
             android:label="fragment_shows"
             tools:layout="@layout/fragment_shows">
         <action
