--- a/app/src/main/res/menu/bottom_nav.xml
+++ b/app/src/main/res/menu/bottom_nav.xml
@@ -23,7 +23,7 @@
     <item
         android:id="@+id/watching"
         android:icon="@drawable/ic_list"
-        android:title="@string/title_shows" />
+        android:title="@string/title_watching" />
     <item
         android:id="@+id/downloads"
         android:icon="@drawable/ic_download"
