--- a/app/src/main/res/layout/adapter_episodes.xml
+++ b/app/src/main/res/layout/adapter_episodes.xml
@@ -5,13 +5,12 @@
         android:layout_height="64dp">
 
     <ImageView
-            android:id="@+id/imageView2"
+            android:id="@+id/ivEpisodeThumbnail"
             android:layout_width="100dp"
             android:layout_height="0dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
-            android:background="#000"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -20,12 +19,11 @@
             android:id="@+id/tvEpisodeName"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
             android:textColor="#000"
             android:textSize="24sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/imageView2"
+            app:layout_constraintStart_toEndOf="@+id/ivEpisodeThumbnail"
             app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
