--- a/app/src/main/res/layout/adapter_episodes.xml
+++ b/app/src/main/res/layout/adapter_episodes.xml
@@ -11,6 +11,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
+            android:background="#000"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -19,6 +20,7 @@
             android:id="@+id/tvEpisodeName"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
             android:textColor="#000"
             android:textSize="24sp"
