--- a/app/src/main/res/layout/fragment_show_detail.xml
+++ b/app/src/main/res/layout/fragment_show_detail.xml
@@ -11,28 +11,26 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-        <TextView
-                android:id="@+id/tvShowName"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:text="TextView"
-                android:textColor="#000"
-                android:textSize="24sp"
+        <ImageView
+                android:id="@+id/ivShowThumbnail"
+                android:layout_width="0dp"
+                android:layout_height="180dp"
+                android:scaleType="centerCrop"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                tools:src="@tools:sample/avatars" />
 
         <Spinner
                 android:id="@+id/spnSeasons"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="16dp"
                 android:layout_marginEnd="8dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tvShowName" />
+                app:layout_constraintTop_toBottomOf="@+id/ivShowThumbnail" />
 
         <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rvEpisodes"
