Small design improvements in the shows adapter

--- a/app/src/main/res/layout/adapter_shows.xml
+++ b/app/src/main/res/layout/adapter_shows.xml
@@ -5,7 +5,7 @@
         android:layout_height="160dp"
         android:background="?android:attr/selectableItemBackground">
 
-    <ImageView
+    <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/ivShowThumbnail"
             android:layout_width="0dp"
             android:layout_height="0dp"
@@ -16,13 +16,15 @@
             app:layout_constraintBottom_toTopOf="@+id/tvShowTitle"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:shapeAppearanceOverlay="@style/roundedCornersImageView" />
 
     <TextView
             android:id="@+id/tvShowTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
+            android:textAlignment="center"
             android:textColor="#000"
             android:textSize="24sp"
             app:layout_constraintBottom_toBottomOf="parent"
