--- a/app/src/main/res/layout/fragment_show_detail.xml
+++ b/app/src/main/res/layout/fragment_show_detail.xml
@@ -38,7 +38,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:cursorVisible="false"
-                    android:focusable="false" />
+                    android:focusable="false"
+                    android:inputType="textPhonetic" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
