--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -15,62 +15,82 @@
   -->
 
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/form"
-        app:startDestination="@id/home">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/form"
+    app:startDestination="@id/home">
 
     <fragment
-            android:id="@+id/home"
-            android:name="cat.xarxacatala.xarxacatalapp.shows.ShowsFragment"
-            android:label="@string/title_home"
-            tools:layout="@layout/fragment_shows">
+        android:id="@+id/home"
+        android:name="cat.xarxacatala.xarxacatalapp.shows.ShowsFragment"
+        android:label="@string/title_home"
+        tools:layout="@layout/fragment_shows">
         <action
-                android:id="@+id/action_home_to_showDetailFragment"
-                app:destination="@id/showDetailFragment" />
+            android:id="@+id/action_home_to_showDetailFragment"
+            app:destination="@id/showDetailFragment" />
+        <action
+            android:id="@+id/action_home_to_castFragment"
+            app:destination="@id/castFragment" />
     </fragment>
     <fragment
-            android:id="@+id/downloads"
-            android:name="cat.xarxacatala.xarxacatalapp.ui.DownloadsFragment"
-            android:label="@string/title_downloads"
-            tools:layout="@layout/fragment_downloads">
+        android:id="@+id/downloads"
+        android:name="cat.xarxacatala.xarxacatalapp.ui.DownloadsFragment"
+        android:label="@string/title_downloads"
+        tools:layout="@layout/fragment_downloads">
         <action
-                android:id="@+id/action_downloads_to_videoPlayerFragment"
-                app:destination="@id/videoPlayerFragment" />
+            android:id="@+id/action_downloads_to_videoPlayerFragment"
+            app:destination="@id/videoPlayerFragment" />
         <action
-                android:id="@+id/action_downloads_to_showDetailFragment"
-                app:destination="@id/showDetailFragment" />
+            android:id="@+id/action_downloads_to_showDetailFragment"
+            app:destination="@id/showDetailFragment" />
+        <action
+            android:id="@+id/action_downloads_to_castFragment"
+            app:destination="@id/castFragment" />
     </fragment>
     <fragment
-            android:id="@+id/videoPlayerFragment"
-            android:name="cat.xarxacatala.xarxacatalapp.videoPlayer.VideoPlayerFragment"
-            tools:layout="@layout/fragment_video_player">
+        android:id="@+id/videoPlayerFragment"
+        android:name="cat.xarxacatala.xarxacatalapp.videoPlayer.VideoPlayerFragment"
+        tools:layout="@layout/fragment_video_player">
         <argument
-                android:name="episodeId"
-                app:argType="integer" />
+            android:name="episodeId"
+            app:argType="integer" />
+        <action
+            android:id="@+id/action_videoPlayerFragment_to_castFragment"
+            app:destination="@id/castFragment" />
     </fragment>
     <fragment
-            android:id="@+id/watching"
-            android:name="cat.xarxacatala.xarxacatalapp.ui.WatchingFragment"
-            android:label="@string/title_watching"
-            tools:layout="@layout/fragment_watching">
+        android:id="@+id/watching"
+        android:name="cat.xarxacatala.xarxacatalapp.ui.WatchingFragment"
+        android:label="@string/title_watching"
+        tools:layout="@layout/fragment_watching">
         <action
-                android:id="@+id/action_watching_to_videoPlayerFragment"
-                app:destination="@id/videoPlayerFragment" />
+            android:id="@+id/action_watching_to_videoPlayerFragment"
+            app:destination="@id/videoPlayerFragment" />
         <action
-                android:id="@+id/action_watching_to_showDetailFragment"
-                app:destination="@id/showDetailFragment" />
+            android:id="@+id/action_watching_to_showDetailFragment"
+            app:destination="@id/showDetailFragment" />
+        <action
+            android:id="@+id/action_watching_to_castFragment"
+            app:destination="@id/castFragment" />
     </fragment>
     <fragment
-            android:id="@+id/showDetailFragment"
-            android:name="cat.xarxacatala.xarxacatalapp.showDetail.ShowDetailFragment"
-            tools:layout="@layout/fragment_show_detail">
+        android:id="@+id/showDetailFragment"
+        android:name="cat.xarxacatala.xarxacatalapp.showDetail.ShowDetailFragment"
+        tools:layout="@layout/fragment_show_detail">
         <argument
-                android:name="showId"
-                android:defaultValue="0"
-                app:argType="integer" />
+            android:name="showId"
+            android:defaultValue="0"
+            app:argType="integer" />
         <action
-                android:id="@+id/action_showDetailFragment_to_videoPlayerFragment"
-                app:destination="@id/videoPlayerFragment" />
+            android:id="@+id/action_showDetailFragment_to_videoPlayerFragment"
+            app:destination="@id/videoPlayerFragment" />
+        <action
+            android:id="@+id/action_showDetailFragment_to_castFragment"
+            app:destination="@id/castFragment" />
     </fragment>
+    <fragment
+        android:id="@+id/castFragment"
+        android:name="cat.xarxacatala.xarxacatalapp.cast.CastFragment"
+        android:label="fragment_cast"
+        tools:layout="@layout/fragment_cast" />
 </navigation>
