--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -28,4 +28,22 @@
         <item name="cornerFamily">rounded</item>
         <item name="cornerSize">5dp</item>
     </style>
+
+    <style name="Widget.App.ShapeableImageView" parent="Widget.MaterialComponents.ShapeableImageView">
+        <item name="shapeAppearance">
+            ?attr/shapeAppearanceSmallComponent
+        </item>
+        <item name="shapeAppearanceOverlay">
+            @style/CornerSize50Percent
+        </item>
+        <item name="strokeWidth">1dp</item>
+        <item name="strokeColor">?attr/colorPrimary</item>
+    </style>
+
+    <style name="CornerSize50Percent">
+        <!--
+        Sets size of corners to be 50% of min(width, height) of widget
+        -->
+        <item name="cornerSize">50%</item>
+    </style>
 </resources>
